--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "react": "^0.13.3",
-    "superagent": "~1.2.0"
+    "superagent": "~1.2.0",
+    "react-router": "^1.0.0-rc1"
   },
   "devDependencies": {
     "babel-core": "^5.6.18",
